--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 @import 'tailwindcss';
 
 body{
-    background-image: radial-gradient(#000000 1px, transparent 1px);
-    background-size: 22px 22px;
+    background-image: radial-gradient(#ececec 1.5px, transparent 1.5px);
+    background-size: 10px 10px;
     background-color: #ffffff;
+    /* height: 900vh; */
 }
