--- a/src/style.css
+++ b/src/style.css
@@ -4,13 +4,15 @@
 
 body{
     font-family: "LINE Seed JP", sans-serif;
-    background-image: radial-gradient(#ececec 1.5px, transparent 1.5px);
+    /* background-image: radial-gradient(#ececec 1.5px, transparent 25px);
     background-size: 10px 10px;
-    background-color: #ffffff;
+    background-color: #ffffff; */
     /* height: 900vh; */
 
     /* background-color: #1c1917; */
     /* background-image:  url(/public/Images/gridbg.png);
     background-repeat: no-repeat;
     background-size: cover; */
+    background: linear-gradient(to right, #0f172a, #334155);
+
 }
